--- a/VRChat/29/1255829.html
+++ b/VRChat/29/1255829.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JAu2eusR6Dr4pvRAo7gBJ1Vy2fOZGrYRAjKIMuf8rHc="></script>
+    "6LHu5DN7Mx0dWqi0T6UdOlDmXNhSaDw9o1JqqR3Ub8Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"すけっちぶっく【VRチャット向け３Dモデル】","description":"◆概要\n\nわかりやすいように某メイカーのようなものになっているスケッチブックです。\n描いた絵を見せるなり、ネタ振りようにしたり、使い方は様々！！\n\n\n制作：みこさく\n\n◆使い方\n\n本モデルは5ページ分ほど、テクスチャに書き込むことができます。\nテクスチャの改変で使用するもの。として作っているので、難しいギミックなどはありません。\n\nアバターに持たせて何かを見せたり、ワールドに置いてお絵描きしてる様子を作ってもいいと思います。\n\n自分の使用例として「ここでボケて！」というページがあります。\n\n\n◆内容\n\n▽すけっちぶっく.unitypackage\n└すけっちぶっく.fbx\n└ペン(マジック/鉛筆).fbx\n└すけっちぶっく.png\n└マテリアルなど\n※ファイル名は上記とは異なります。\n\n▽注意.txt\n\n\n◆利用・改変等に関して\n\n本モデルはVRChatでの使用を主な目的として制作しています。\n配信及び映像作品、その他プラットフォームでの利用も自由です。\nテクスチャの変更やモデルの改変等も可能です。\n詳しくは「README.txt」を参照し、それでもわからない場合は問い合わせしてください。\n\n\n◆著作権・制限事項・免責事項などの難しいところ\n\n本データの自作発言、他者への二次配布、パブリックワールド設置アバターへの使用を禁止します。\n本データの著作権は、しめさば水産に帰属します。\n本データを使用して発生した、いかなる損害・損失・その他不利益等には、当方は一切の責任を負いません。\n\n\n\n","url":"https://booth.pm/ja/items/1255829","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/35e9b140-14bb-4adb-90ad-592d067cee32/i/1255829/86bd4957-b737-4db4-999c-64759427592c_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JAu2eusR6Dr4pvRAo7gBJ1Vy2fOZGrYRAjKIMuf8rHc="></script>
+    nonce="6LHu5DN7Mx0dWqi0T6UdOlDmXNhSaDw9o1JqqR3Ub8Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1255829/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1255829/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
