--- a/VRChat/96/1255096.html
+++ b/VRChat/96/1255096.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+tapuRuTZW1wWgSgmOfJ4y/NVoCldVN+/Fw1Jm3/3Y0="></script>
+    "HF6CjE88uaj2oRbaWZMuFmcjNbYJDZm4BPJbBbfV92E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料有】マフラー【揺れ設定付き】","description":"★Vroidにも装着可能な小物です！\n詳しい使い方は動画にまとめています(*´°`*)\nhttps://youtu.be/UjyiEyw_tHQ\n\n【無料版：試着用オブジェクト(３tene推進)】\n・テクスチャ1枚\n・ボーンなし\n・質感なし\n\n【有料版：Unityセット(簡単設定)】\n・テクスチャ3枚\n・UVガイド\n・ボーン付(変形による微調整可能)\n・揺れ設定付\n\n揺れる設定もデータ内に組み込まれているので\n配置だけでOKです。\n\nUnity版の使用方法が不安な方は\n無料で配布しているもあるので試してみてください＾＾\nhttps://aopanda.booth.pm/items/1224917\n\n大きさやテクスチャなど簡単に\nカスタマイズできるので\nぜひ遊んでみてくださいー！","url":"https://booth.pm/ja/items/1255096","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"400"},"image":"https://booth.pximg.net/c/620x620/e0c8b443-1482-4a14-acf8-e9b4cc1c8831/i/1255096/7da5595a-61bc-4430-87bc-6dbbb89085a4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+tapuRuTZW1wWgSgmOfJ4y/NVoCldVN+/Fw1Jm3/3Y0="></script>
+    nonce="HF6CjE88uaj2oRbaWZMuFmcjNbYJDZm4BPJbBbfV92E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1255096/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               526
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1255096/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               526
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
